finish the models using only title

--- a/model_title/coatt_06_coattention_several_spaces_model_title_withou_GRU.ipynb
+++ b/model_title/coatt_06_coattention_several_spaces_model_title_withou_GRU.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,69 @@
       "Epoch 00004: val_accuracy improved from 0.93204 to 0.93719, saving model to coattention2_several_spaces_model_title_04_0.9372.h5\n",
       "169500/169500 [==============================] - 119s 701us/sample - loss: 0.1629 - accuracy: 0.9386 - val_loss: 0.1616 - val_accuracy: 0.9372\n",
       "Epoch 5/20\n",
-      " 94016/169500 [===============>..............] - ETA: 51s - loss: 0.1496 - accuracy: 0.9422"
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1506 - accuracy: 0.9419\n",
+      "Epoch 00005: val_accuracy did not improve from 0.93719\n",
+      "169500/169500 [==============================] - 118s 698us/sample - loss: 0.1506 - accuracy: 0.9420 - val_loss: 0.1806 - val_accuracy: 0.9348\n",
+      "Epoch 6/20\n",
+      "169408/169500 [============================>.] - ETA: 0s - loss: 0.1415 - accuracy: 0.9457\n",
+      "Epoch 00006: val_accuracy did not improve from 0.93719\n",
+      "169500/169500 [==============================] - 118s 699us/sample - loss: 0.1415 - accuracy: 0.9457 - val_loss: 0.1742 - val_accuracy: 0.9366\n",
+      "Epoch 7/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1327 - accuracy: 0.9482\n",
+      "Epoch 00007: val_accuracy improved from 0.93719 to 0.93926, saving model to coattention2_several_spaces_model_title_07_0.9393.h5\n",
+      "169500/169500 [==============================] - 118s 698us/sample - loss: 0.1327 - accuracy: 0.9482 - val_loss: 0.1698 - val_accuracy: 0.9393\n",
+      "Epoch 8/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1264 - accuracy: 0.9507\n",
+      "Epoch 00008: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.1264 - accuracy: 0.9507 - val_loss: 0.1606 - val_accuracy: 0.9391\n",
+      "Epoch 9/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1195 - accuracy: 0.9525\n",
+      "Epoch 00009: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.1195 - accuracy: 0.9526 - val_loss: 0.2031 - val_accuracy: 0.9388\n",
+      "Epoch 10/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1131 - accuracy: 0.9551\n",
+      "Epoch 00010: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 698us/sample - loss: 0.1132 - accuracy: 0.9551 - val_loss: 0.1815 - val_accuracy: 0.9385\n",
+      "Epoch 11/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1070 - accuracy: 0.9577\n",
+      "Epoch 00011: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.1070 - accuracy: 0.9577 - val_loss: 0.2033 - val_accuracy: 0.9384\n",
+      "Epoch 12/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1025 - accuracy: 0.9589\n",
+      "Epoch 00012: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 698us/sample - loss: 0.1025 - accuracy: 0.9589 - val_loss: 0.1956 - val_accuracy: 0.9379\n",
+      "Epoch 13/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0966 - accuracy: 0.9605\n",
+      "Epoch 00013: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.0966 - accuracy: 0.9605 - val_loss: 0.1961 - val_accuracy: 0.9365\n",
+      "Epoch 14/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0934 - accuracy: 0.9618\n",
+      "Epoch 00014: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.0934 - accuracy: 0.9618 - val_loss: 0.2042 - val_accuracy: 0.9330\n",
+      "Epoch 15/20\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0896 - accuracy: 0.9631\n",
+      "Epoch 00015: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 698us/sample - loss: 0.0896 - accuracy: 0.9631 - val_loss: 0.2158 - val_accuracy: 0.9377\n",
+      "Epoch 16/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0854 - accuracy: 0.9650\n",
+      "Epoch 00016: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.0854 - accuracy: 0.9650 - val_loss: 0.2415 - val_accuracy: 0.9369\n",
+      "Epoch 17/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0823 - accuracy: 0.9659\n",
+      "Epoch 00017: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.0823 - accuracy: 0.9659 - val_loss: 0.2368 - val_accuracy: 0.9390\n",
+      "Epoch 18/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0789 - accuracy: 0.9676\n",
+      "Epoch 00018: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.0789 - accuracy: 0.9676 - val_loss: 0.2941 - val_accuracy: 0.9367\n",
+      "Epoch 19/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0762 - accuracy: 0.9683\n",
+      "Epoch 00019: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.0762 - accuracy: 0.9683 - val_loss: 0.3140 - val_accuracy: 0.9362\n",
+      "Epoch 20/20\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.0733 - accuracy: 0.9697\n",
+      "Epoch 00020: val_accuracy did not improve from 0.93926\n",
+      "169500/169500 [==============================] - 118s 697us/sample - loss: 0.0733 - accuracy: 0.9697 - val_loss: 0.2924 - val_accuracy: 0.9345\n"
      ]
     }
    ],
