create the models using two signals

--- a/baselines/model_doc2vec.ipynb
+++ b/baselines/model_doc2vec.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85900it [01:27, 981.60it/s] \n"
+      "85900it [03:37, 395.51it/s]\n"
      ]
     }
    ],
@@ -73,8 +73,9 @@
     "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
     "    table_title = row['table_page_title']\n",
+    "    table_page_summary = row['table_page_summary']\n",
     "    \n",
-    "    vector_words = tknzr.tokenize(table_title)\n",
+    "    vector_words = tknzr.tokenize(table_title+ \" \"+table_page_summary)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
     "    tables_ids.append(row['table_id'])\n",
@@ -90,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [00:01, 847.47it/s]\n"
+      "1026it [00:02, 399.48it/s]\n"
      ]
     }
    ],
@@ -108,9 +109,10 @@
     "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
     "    article_page_title = row['page_title']\n",
+    "    article_page_meta_description = row['summary']\n",
     "         \n",
     "    #embedding\n",
-    "    vector_words = tknzr.tokenize(article_page_title)\n",
+    "    vector_words = tknzr.tokenize(article_page_title+\" \"+article_page_meta_description)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
     "    articles_ids.append(row['page_id'])\n",
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [04:52<00:00,  3.52it/s]\n"
+      "100%|██████████| 1026/1026 [03:51<00:00,  4.39it/s]\n"
      ]
     }
    ],
@@ -234,17 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2018\n",
-      "0.2885\n",
-      "0.3236\n",
-      "0.3587\n"
+      "0.0926\n",
+      "0.1569\n",
+      "0.1949\n",
+      "0.2378\n"
      ]
     }
    ],
