finish the models using two article/table signals

--- a/baselines/model_doc2vec.ipynb
+++ b/baselines/model_doc2vec.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85900it [03:37, 395.51it/s]\n"
+      "85900it [06:42, 213.43it/s]\n"
      ]
     }
    ],
@@ -74,8 +74,9 @@
     "    \n",
     "    table_title = row['table_page_title']\n",
     "    table_page_summary = row['table_page_summary']\n",
+    "    table_page_keywords = row['table_page_keywords']\n",
     "    \n",
-    "    vector_words = tknzr.tokenize(table_title+ \" \"+table_page_summary)\n",
+    "    vector_words = tknzr.tokenize(table_title+ \" \"+table_page_summary+\" \"+table_page_keywords)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
     "    tables_ids.append(row['table_id'])\n",
@@ -91,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [00:02, 399.48it/s]\n"
+      "1026it [00:04, 213.24it/s]\n"
      ]
     }
    ],
@@ -110,9 +111,10 @@
     "    \n",
     "    article_page_title = row['page_title']\n",
     "    article_page_meta_description = row['summary']\n",
+    "    article_keywords = row['keywords']\n",
     "         \n",
     "    #embedding\n",
-    "    vector_words = tknzr.tokenize(article_page_title+\" \"+article_page_meta_description)\n",
+    "    vector_words = tknzr.tokenize(article_page_title+\" \"+article_page_meta_description+\" \"+article_keywords)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
     "    articles_ids.append(row['page_id'])\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [03:51<00:00,  4.39it/s]\n"
+      "100%|██████████| 1026/1026 [05:55<00:00,  2.91it/s]\n"
      ]
     }
    ],
@@ -236,17 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0926\n",
-      "0.1569\n",
-      "0.1949\n",
-      "0.2378\n"
+      "0.1101\n",
+      "0.192\n",
+      "0.2437\n",
+      "0.2934\n"
      ]
     }
    ],
