--- a/baselines/model_elasticsearch_tfidf_bm25.ipynb
+++ b/baselines/model_elasticsearch_tfidf_bm25.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
-    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
+    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
     "indexing_distinct_tables.indices.open(index='distinct_tables')"
    ]
   },
@@ -65,7 +65,7 @@
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
     "              #\"fields\": [\"tablePgTitle\"] \n",
-    "              \"fields\": [\"tablePgTitle\",\"tablePgSummary\"] \n",
+    "              \"fields\": [\"tablePgSummary\"] \n",
     "              #\"fields\": [tableField]\n",
     "            }\n",
     "        }\n",
@@ -105,7 +105,7 @@
     "    for i,row in (articles.iterrows()):\n",
     "\n",
     "        articl_key = row['page_id']\n",
-    "        query = row['page_title']+\" \"+row['meta_description']\n",
+    "        query = row['page_title']+\" \"+row['meta_description']+\" \"+row['keywords']\n",
     "\n",
     "        result = search_indexing(query,tableField)\n",
     "\n",
