--- a/model_title_main_passage/affinity_model_title_main_passage.ipynb
+++ b/model_title_main_passage/affinity_model_title_main_passage.ipynb
@@ -27,18 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pd.read_csv('create_true_false_samples/true_pairs_by_cosine_070_title_main_passage.csv', delimiter=',')\n",
-    "false_pairs = pd.read_csv('create_true_false_samples/false_pairs_by_pands_title_main_passage.csv', delimiter=',')\n",
-    "false_pairs = false_pairs.head((len(true_pairs))*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_concat = pd.concat([true_pairs,false_pairs])"
+    "train_dataset = pd.read_csv('../train_data/train_data_1_1', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../train_data/validation_data_1_1', delimiter=',')"
    ]
   },
   {
@@ -47,15 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset, validation_dataset = train_test_split(df_concat, test_size=0.10, random_state=42)"
-   ]
   },
   {
    "cell_type": "code",
@@ -110,6 +91,7 @@
     "    else:\n",
     "        \n",
     "        embedding = embedding_model.wv[value[0:MAX_PAD_TITLE]]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        return embedding"
    ]
@@ -158,6 +140,7 @@
     "    else:\n",
     "        \n",
     "        embedding = embedding_model.wv[value[0:MAX_PAD_MAIN_PASSAGE]]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        return embedding"
    ]
@@ -292,7 +275,9 @@
     "    \n",
     "    affinity = tf.matmul(query,transpose_document)\n",
     "    \n",
-    "    return affinity"
+    "    normalize_affinity = tf.nn.softmax(affinity)\n",
+    "    \n",
+    "    return normalize_affinity"
    ]
   },
   {
@@ -322,28 +307,45 @@
     "    rep_table_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
     "    rep_table_text = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_main_passage)\n",
     "    \n",
-    "    #affinity article title and table title\n",
-    "    aff_A_title_T_title = affinity_method(rep_article_title,rep_table_title)\n",
-    "    rep_aff_A_title_T_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_title_T_title)\n",
-    "    vector_A_title_T_title = tf.keras.layers.Flatten()(rep_aff_A_title_T_title)\n",
     "    \n",
-    "    #affinity article title and table text\n",
-    "    aff_A_title_T_text = affinity_method(rep_article_title,rep_table_text)\n",
-    "    rep_aff_A_title_T_text = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_title_T_text)\n",
-    "    vector_A_title_T_text = tf.keras.layers.Flatten()(rep_aff_A_title_T_text)\n",
+    "    #affinity article title and table title over two spaces\n",
+    "    aff_A_title_T_title1 = affinity_method(rep_article_title,rep_table_title)\n",
+    "    rep_aff_A_title_T_title1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_title_T_title1)\n",
+    "    vector_A_title_T_title1 = tf.keras.layers.Flatten()(rep_aff_A_title_T_title1)\n",
     "    \n",
-    "    #affinity article text and table title\n",
-    "    aff_A_text_T_title = affinity_method(rep_article_text,rep_table_title)\n",
-    "    rep_aff_A_text_T_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_text_T_title)\n",
-    "    vector_A_text_T_title = tf.keras.layers.Flatten()(rep_aff_A_text_T_title)\n",
+    "    aff_A_title_T_title2 = affinity_method(article_title,table_title)\n",
+    "    rep_aff_A_title_T_title2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_title_T_title2)\n",
+    "    vector_A_title_T_title2 = tf.keras.layers.Flatten()(rep_aff_A_title_T_title2)\n",
     "    \n",
-    "    #affinity article text and table text\n",
-    "    aff_A_text_T_text = affinity_method(rep_article_text,rep_table_text)\n",
-    "    rep_aff_A_text_T_text = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_text_T_text)\n",
-    "    vector_A_text_T_text = tf.keras.layers.Flatten()(rep_aff_A_text_T_text)\n",
+    "    #affinity article title and table text over two spaces\n",
+    "    aff_A_title_T_text1 = affinity_method(rep_article_title,rep_table_text)\n",
+    "    rep_aff_A_title_T_text1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_title_T_text1)\n",
+    "    vector_A_title_T_text1 = tf.keras.layers.Flatten()(rep_aff_A_title_T_text1)\n",
+    "    \n",
+    "    aff_A_title_T_text2 = affinity_method(article_title,table_main_passage)\n",
+    "    rep_aff_A_title_T_text2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_title_T_text2)\n",
+    "    vector_A_title_T_text2 = tf.keras.layers.Flatten()(rep_aff_A_title_T_text2)\n",
+    "    \n",
+    "    #affinity article text and table title over two spaces\n",
+    "    aff_A_text_T_title1 = affinity_method(rep_article_text,rep_table_title)\n",
+    "    rep_aff_A_text_T_title1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_text_T_title1)\n",
+    "    vector_A_text_T_title1 = tf.keras.layers.Flatten()(rep_aff_A_text_T_title1)\n",
+    "    \n",
+    "    aff_A_text_T_title2 = affinity_method(article_main_passage,table_title)\n",
+    "    rep_aff_A_text_T_title2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_text_T_title2)\n",
+    "    vector_A_text_T_title2 = tf.keras.layers.Flatten()(rep_aff_A_text_T_title2)\n",
+    "    \n",
+    "    #affinity article text and table text over two spaces\n",
+    "    aff_A_text_T_text1 = affinity_method(rep_article_text,rep_table_text)\n",
+    "    rep_aff_A_text_T_text1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_text_T_text1)\n",
+    "    vector_A_text_T_text1 = tf.keras.layers.Flatten()(rep_aff_A_text_T_text1)\n",
+    "    \n",
+    "    aff_A_text_T_text2 = affinity_method(article_main_passage,table_main_passage)\n",
+    "    rep_aff_A_text_T_text2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(aff_A_text_T_text2)\n",
+    "    vector_A_text_T_text2 = tf.keras.layers.Flatten()(rep_aff_A_text_T_text2)\n",
     "    \n",
     "    #learned vector\n",
-    "    final_vector = tf.keras.layers.Concatenate()([vector_A_title_T_title,vector_A_title_T_text,vector_A_text_T_title,vector_A_text_T_text])\n",
+    "    final_vector = tf.keras.layers.Concatenate()([vector_A_title_T_title1,vector_A_title_T_title2,vector_A_title_T_text1,vector_A_title_T_text2,vector_A_text_T_title1,vector_A_text_T_title2,vector_A_text_T_text1,vector_A_text_T_text2])\n",
     "    \n",
     "    MLP_input = tf.keras.layers.Dense(128, activation='relu')(final_vector)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(MLP_input)\n",
@@ -370,13 +372,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model.compile(loss=\"binary_crossentropy\",optimizer=\"adam\", metrics=['accuracy'])"
    ]
@@ -388,7 +383,7 @@
    "outputs": [],
    "source": [
     "filepath=\"affinity_model_title_main_passage_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
-    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
+    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=2, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
@@ -401,6 +396,7 @@
     "history = model.fit([train_article_title, train_article_main_passage, train_table_title, train_table_main_passage], train_label, \n",
     "          epochs=20, \n",
     "          batch_size=32, \n",
+    "          verbose=2,\n",
     "          validation_data=([validation_article_title, validation_article_main_passage, validation_table_title, validation_table_main_passage], validation_label),\n",
     "          callbacks=callbacks_list)"
    ]
@@ -411,97 +407,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# summarize history for accuracy\n",
-    "plt.plot(history.history['accuracy'])\n",
-    "plt.plot(history.history['val_accuracy'])\n",
-    "plt.title('model accuracy')\n",
-    "plt.ylabel('accuracy')\n",
-    "plt.xlabel('epoch')\n",
-    "plt.legend(['train', 'validation'], loc='upper left')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# summarize history for loss\n",
-    "plt.plot(history.history['loss'])\n",
-    "plt.plot(history.history['val_loss'])\n",
-    "plt.title('model loss')\n",
-    "plt.ylabel('loss')\n",
-    "plt.xlabel('epoch')\n",
-    "plt.legend(['train', 'validation'], loc='upper left')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = tf.keras.models.load_model('affinity_model_title_main_passage_07_0.9487.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_prob = model.predict([validation_article_title,validation_article_main_passage,validation_table_title, validation_table_main_passage])\n",
-    "y_predict = (y_prob > 0.5).astype(np.int)\n",
-    "accuracy_score(validation_label, y_predict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "import sklearn.metrics\n",
-    "confusion_matrix = sklearn.metrics.confusion_matrix(validation_label, y_predict)\n",
-    "\n",
-    "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(confusion_matrix, annot=True, fmt=\"d\", cmap=\"YlGnBu\")#, annot_kws={\"size\": 15});\n",
-    "plt.title(\"Confusion matrix\")\n",
-    "plt.ylabel('True label')\n",
-    "plt.xlabel('Predict label')\n",
-    "plt.show()"
-   ]
   },
   {
    "cell_type": "code",
