--- a/model_title_main_passage/table_retrieval_title_main_passage.ipynb
+++ b/model_title_main_passage/table_retrieval_title_main_passage.ipynb
@@ -277,11 +277,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    }
+   ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('attention_model_title_main_passage_27_0.9501.h5')"
+    "ranking_model = tf.keras.models.load_model('affinity_model_title_main_passage_30_0.9746.h5')"
    ]
   },
   {
@@ -364,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,17 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [05:13,  3.30it/s]\n",
-      "1026it [05:08,  3.35it/s]\n",
-      "1026it [02:50,  6.70it/s]\n",
-      "1026it [02:34,  6.67it/s]\n"
+      "1026it [06:41,  2.75it/s]\n",
+      "1026it [06:35,  2.60it/s]\n",
+      "1026it [06:37,  2.68it/s]\n",
+      "1026it [06:37,  2.57it/s]\n"
      ]
     }
    ],
@@ -457,19 +467,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Acc@1', '0.386'],\n",
-       " ['Acc@5', '0.4103'],\n",
-       " ['Acc@10', '0.4366'],\n",
-       " ['Acc@20', '0.5019']]"
+       "[['Acc@1', '0.5497'],\n",
+       " ['Acc@5', '0.5595'],\n",
+       " ['Acc@10', '0.5682'],\n",
+       " ['Acc@20', '0.576']]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
