--- a/baselines/model_universal_sentence_encoder.ipynb
+++ b/baselines/model_universal_sentence_encoder.ipynb
@@ -71,7 +71,7 @@
     "for i, row in articles.iterrows():\n",
     "    \n",
     "    articles_id.append(row['page_id'])\n",
-    "    articles_title.append(row['page_title']+\" \"+row['summary'])"
+    "    articles_title.append(row['page_title']+\" \"+row['summary']+\" \"+row['keywords'])"
    ]
   },
   {
@@ -126,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85900it [00:06, 12710.61it/s]\n"
+      "85900it [00:12, 6724.10it/s]\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
     "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
     "    tables_ids.append(row['table_id'])\n",
-    "    tables_title.append(row['table_page_title']+\" \"+row['table_page_summary'])"
+    "    tables_title.append(row['table_page_title']+\" \"+row['table_page_summary']+\" \"+row['table_page_keywords'])"
    ]
   },
   {
@@ -259,7 +259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [04:31<00:00,  3.84it/s]\n"
+      "100%|██████████| 1026/1026 [06:50<00:00,  2.47it/s]\n"
      ]
     }
    ],
@@ -315,10 +315,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1472\n",
-      "0.2349\n",
-      "0.2778\n",
-      "0.3226\n"
+      "0.1647\n",
+      "0.2729\n",
+      "0.3148\n",
+      "0.3694\n"
      ]
     }
    ],
